# inkmd

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  LICENSE  LIZARD-AUDIT.md  README.md  pyproject.toml
docs/: comparisons.md  conformance.md  internals.md  security.md  visual-checklist.md
docs/design/: html-passthrough.md
docs/gallery/: README.md
docs/gallery/sources/: 01-nested-lists.md  02-long-urls.md  03-pathological-emphasis.md  04-table-edges.md  05-mixed-blocks.md  06-very-long-lines.md  07-unicode-winansi.md  08-code-density.md  09-mid-paragraph-rules.md  (+1 more)
examples/: hero-sample.md  inkmd-brief.md  torture-test.md
scripts/: bench.py  build_zipapp.py
src/inkmd/: __init__.py  __main__.py  _kerning_data.py  ast.py  cli.py  fonts.py  html_filter.py  image_loader.py  layout.py  parser.py  pdf.py  render.py  url_filter.py
tests/: test_autolinks.py  test_blockquotes_codeblocks.py  test_cli.py  test_code_wrap.py  test_commonmark_inline.py  test_compile.py  test_fonts.py  test_hard_breaks.py  test_headings.py  test_html_passthrough.py  test_images.py  test_indented_code.py  test_inline_parser.py  test_kerning.py  test_layout.py  test_links.py  test_lists.py  test_parser.py  test_pdf_emission.py  test_reference_links.py  test_render.py  test_strikethrough.py  test_styled_layout.py  test_styled_pdf.py  test_tables.py  test_task_lists.py  test_text_pdf.py  test_thematic_break.py  test_times.py  test_url_filter.py  test_zipapp.py
tests/conformance/: extract_gfm.py  gfm-0.29.json  gfm-spec-source.html  html_serialise.py  resource_probe.py  run_commonmark.py  run_gfm.py
